<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="#F1EEEE"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number1Id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#0B0A0A"
        android:hint="@string/number1_text"
        android:inputType="numberDecimal"

        />
    <EditText
        android:id="@+id/number2Id"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#050505"
        android:hint="@string/number2_text"
        android:inputType="numberDecimal"

        />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

    <Button
        android:id="@+id/addButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/subButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_button"
        android:textStyle="bold"
        android:textSize="20sp"
        />
     </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/multiplyButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply_button"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/divisionButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_button"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/resultTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultTextView"
        android:textSize="30sp"
        android:textColor="#000000"
        />


</LinearLayout>